--- a/.github/cicd.yml
+++ b/.github/cicd.yml
@@ -39,10 +39,10 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_<GENERATED_HOSTNAME> }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/" # App source code path
-          api_location: "" # Api source code path - optional
-          output_location: "out" # Next.js static export directory
-          skip_app_build: true # Skip build since we did it above
+          app_location: "/"
+          api_location: ""
+          output_location: "out"
+          skip_app_build: true
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
